# b2

./: .gitignore  .gitmodules  JebFork  README  README.md  b2.sublime-project  core.sublime-project
core/: .gitattributes  .gitignore  ADDITIONAL_GPL_TERMS  AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  b2_class_test  b2_timing_test  bertini2  compile_all_tests.sh  confdefs.h  config.h  config.h.in  config.status  configure  configure.ac  core.sublime-project  endgames_test  float_archive_test  generating_test  libtool  nag_algorithms_test  qi_Parser  run_all_tests.sh  tracking_basics_test
core/.libs/: b2_timing_test  settings_test  tracking_basics_test
core/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
core/doc/: .gitignore  DoxygenLayout.xml  b2_review_CODE_NAME.tex  bertini.doxy.config  bertini2.bib  images_common
core/doc/html/: index.html
core/doc/latex/: refman.tex
core/example/parameter_homotopy/: CMakeLists.txt  README.md
core/example/performance_numbers/: CMakeLists.txt
core/include/: bertini.hpp  bertini.hpp.orig  classic.hpp  complex.hpp  eigen_extensions.hpp  float.hpp  function_tree.hpp  function_tree.hpp.orig  limbo.hpp  logging.hpp  main_header.hpp  mpfr.hpp  mpfr_complex.hpp  mpfr_extensions.hpp  num_traits.hpp  patch.hpp  start_system.hpp  system.hpp  system.hpp.orig  system_parsing.hpp  tracking.hpp
core/include/bertini2/: bertini.hpp  classic.hpp  custom_complex.hpp  double_extensions.hpp  eigen_extensions.hpp  eigen_serialization_addon.hpp  enable_permuted_arguments.hpp  endgames.hpp  forbid_double.hpp  forbid_mixed_arithmetic.hpp  function_tree.hpp  have_bertini.hpp  limbo.hpp  logging.hpp  mpfr_complex.hpp  mpfr_extensions.hpp  num_traits.hpp  parallel.hpp  patch.hpp  random.hpp  slice.hpp  start_system.hpp  system.hpp  system_parsing.hpp  system_pool.hpp  systems.hpp  tracking.hpp
core/include/classic/: parsing.hpp
core/include/function_tree/: function_parsing.h  function_parsing.hpp  function_parsing.hpp.orig  node.h  node.hpp  node.hpp.orig
core/include/settings/: configIni_parse.hpp
core/include/tracking/: amp_criteria.hpp  amp_tracker.hpp  base_tracker.hpp  correct.hpp  euler.hpp  heun_euler.hpp  newton_correct.hpp  ode_predictors.hpp  powerseries.hpp  predict.hpp  step.hpp  tracker.hpp  tracker_loop.hpp  tracking_config.hpp
core/m4/: ax_boost_chrono.m4  ax_boost_filesystem.m4  ax_boost_log.m4  ax_boost_log_setup.m4  ax_boost_program_options.m4  ax_boost_regex.m4  ax_boost_serialization.m4  ax_boost_system.m4  ax_boost_thread.m4  ax_boost_timer.m4  ax_boost_unit_test_framework.m4  ax_cxx_compile_stdcxx.m4  ax_eigen.m4  lx_find_mpi.m4  m4-ax_cxx_compile_stdcxx_14.m4  m4-ax_cxx_compile_stdcxx_14.m4.orig
core/src/basics/: Makemodule.am  custom_complex.cpp  have_bertini.cpp  limbo.cpp  mpfr_complex.cpp  mpfr_extensions.cpp  random.cpp
core/src/bertini/: Makemodule.am  Makemodule.am.orig  bertini.cpp  bertini.cpp.orig  cos_operator.cpp  limbo.cpp  mpfr.cpp  mpfr_extensions.cpp  start_system.cpp  system.cpp
core/src/bertini2/: Makemodule.am  bertini.cpp
core/src/blackbox/: Makemodule.am  algorithm_builder.cpp  argc_argv.cpp  main_mode_switch.cpp
core/src/classes/: complex.cpp
core/src/classic/: Makemodule.am
core/src/common/: Makemodule.am
core/src/corelibrary/: Makemodule.am
core/src/detail/: Makemodule.am
core/src/endgames/: Makemodule.am
core/src/function_tree/: Makemodule.am  factory.cpp  linear_product.cpp  node.cpp  simplify.cpp  special_number.cpp
core/src/io/: Makemodule.am
core/test/: available_tests.txt
python/: .gitignore  ADDITIONAL_GPL_TERMS  Makefile.am  README  aclocal.m4  configure  configure.ac  python.sublime-project  setup.py
python/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
python/doc/: runme.sh
python/docs/: Makefile
python/examples/: eigen_in_python.py  endgame.py  evaluate_system.py  finding_issue.py  make_and_print.py  solve_system.py  track_path_constructed_homotopy.py
python/include/: bertini_python.hpp  boost_mp.hpp  containers_export.hpp  detail.hpp  eigenpy_interaction.hpp  endgame_export.hpp  endgame_observers.hpp  export_mpfr.hpp  function_tree.hpp  function_tree_export.hpp  generic_observable.hpp  generic_observer.hpp  logging.hpp  minieigen_export.hpp  mpfr_complex.hpp  mpfr_export.hpp  mpfr_visitors.hpp  namespaces.hpp  node.hpp  node_export.hpp  node_visitors.hpp  operator.hpp  operator_export.hpp  operator_visitors.hpp  parser_export.hpp  python_common.hpp  random_export.hpp  root.hpp  root_export.hpp  symbol.hpp  symbol_export.hpp  symbol_visitors.hpp  system.hpp  system_export.hpp  tracker.hpp  tracker_export.hpp  tracker_observers.hpp  zero_dim_export.hpp
python/m4/: ax_bertini2.m4  ax_boost_filesystem.m4  ax_boost_log_setup.m4  ax_boost_multiprecision.m4  ax_boost_program_options.m4  ax_boost_python.m4  ax_boost_thread.m4  ax_boost_timer.m4  ax_cxx_compile_stdcxx.m4  ax_eigen.m4  ax_eigenpy.m4  ax_numpy.m4
python/plain_testing_scripts/: multiprec.py  number.py
python/pybertini/: __init__.py  _version.py  function_tree.py  multiprec.py  numbers.py  system.py
python/pybertini_test/: __init__.py  _version.py  function_tree.py  system.py
python/src/: Makemodule.am  bertini_python.cpp  boost_mp.cpp  containers.cpp  detail.cpp  eigenpy_interaction.cpp  endgame_export.cpp  endgame_observers.cpp  export_mpfr.cpp  function_tree.cpp  generic_observable.cpp  generic_observer.cpp  logging.cpp  minieigen_export.cpp  mpfr_complex.cpp  mpfr_export.cpp  node.cpp  node_export.cpp  operator.cpp  operator_export.cpp  parser_export.cpp  random_export.cpp  root.cpp  root_export.cpp  symbol.cpp  symbol_export.cpp  system.cpp  system_export.cpp  tracker_export.cpp  tracker_observers.cpp  zero_dim_export.cpp
python/test/: amptracking_test.py  b2_class_test.py  differentiation_test.py  endgame_test.py  function_tree_test.py  mpfr_test.py  parser_test.py  system_test.py  test_all.py  tracker_test.py  tracking_test.py
python/timing/: timing1.py
python/todo/: example_python.rst
(+1502 files in other folders)
